2.0.12
- removed disabling day night from base activity
- removed unused dagger injection in splash

2.0.11
- removed unused code


2.0.10
- try to fix foregroundimageview crash
- spanish typo fix

2.0.9
- added firebase invites analytics

2.0.8
- song cursor mapper folder crash fix

2.0.7
- added spanish language

2.0.6
- improved analytics:
    - tracks current screen
- added perf monitoring
- added in-app message
- added website deep-linking
- added small implementation for google personal search indexing
- added invite friends

2.0.5
- Fix adaptive color Image presenter crash
- fixed null string crash cursor mapper
- added keep rule to TextInputEditText in proguard

2.0.4
- fixed color accent crash
- fixed crash on repeat mode changed
- added message when starting updating album/artist
- fix playback speed menu typo
- fixed square image shape on player
- added option to show lockscreen
- added option to ignore media store thumnails
- removed edit item ripple on click
- fixed low quality images
- fixed download track image automatically
- fixed edit track not showing properly

2.0.3

- migration to AndroidX
- added black theme to intro
- overall fixes to dark/black theme
- fixed FAB not always working in offline lyrics/floating window
- added save playing queue as playlist
- fixed delete podcast playlist popup
- preferences reorder
- changed library categories landscape behavior
- added option to enable or disable adaptive colors
- added immersive mode
- added search podcast
- added FAB to show keyboard

BUG FIXES
- fixed notch
- create playlist not adding tracks on creation
- buggy swipe and drag in playing queue
- removed corner radius to big image theme
- albums not showing in detail
- playing queue not handling correctly duplicated songs


2.0.2
- added mini player player theme
- added support to do not download album image that has same app as folder (finish to implement)
- removed preset chooser popup


2.0.1
- tap tutorial draw out of screen border