@@ -3,9 +3,7 @@ package dev.olog.msc.presentation.about
 import android.content.res.ColorStateList
 import androidx.databinding.ViewDataBinding
 import androidx.lifecycle.Lifecycle
-import dagger.Lazy
 import dev.olog.msc.BR
-import dev.olog.msc.dagger.qualifier.ActivityLifecycle
 import dev.olog.msc.presentation.base.adapter.AbsAdapter
 import dev.olog.msc.presentation.base.adapter.DataBoundViewHolder
 import dev.olog.msc.presentation.model.DisplayableItem
@@ -13,12 +11,11 @@ import dev.olog.msc.presentation.navigator.NavigatorAbout
 import dev.olog.msc.utils.k.extension.colorAccent
 import dev.olog.msc.utils.k.extension.setOnClickListener
 import kotlinx.android.synthetic.main.item_about.view.*
-import javax.inject.Inject
 
 
-class AboutActivityAdapter @Inject constructor(
-        @ActivityLifecycle lifecycle: Lifecycle,
-        private val navigator: Lazy<NavigatorAbout>,
+class AboutActivityAdapter (
+        lifecycle: Lifecycle,
+        private val navigator: NavigatorAbout,
         private val presenter: AboutActivityPresenter
 
 ) : AbsAdapter<DisplayableItem>(lifecycle) {
@@ -26,14 +23,13 @@ class AboutActivityAdapter @Inject constructor(
     override fun initViewHolderListeners(viewHolder: DataBoundViewHolder, viewType: Int) {
         viewHolder.setOnClickListener(controller) { item, _, _ ->
             when (item.mediaId){
-//                AboutActivityPresenter.AUTHOR_ID -> navigator.get().toDeveloperProfile()
-                AboutActivityPresenter.THIRD_SW_ID -> navigator.get().toLicensesFragment()
-                AboutActivityPresenter.SPECIAL_THANKS_ID -> navigator.get().toSpecialThanksFragment()
-                AboutActivityPresenter.RATE_ID -> navigator.get().toMarket()
-                AboutActivityPresenter.PRIVACY_POLICY -> navigator.get().toPrivacyPolicy()
+                AboutActivityPresenter.THIRD_SW_ID -> navigator.toLicensesFragment()
+                AboutActivityPresenter.SPECIAL_THANKS_ID -> navigator.toSpecialThanksFragment()
+                AboutActivityPresenter.RATE_ID -> navigator.toMarket()
+                AboutActivityPresenter.PRIVACY_POLICY -> navigator.toPrivacyPolicy()
                 AboutActivityPresenter.BUY_PRO -> presenter.buyPro()
-                AboutActivityPresenter.COMMUNITY -> navigator.get().joinCommunity()
-                AboutActivityPresenter.BETA -> navigator.get().joinBeta()
+                AboutActivityPresenter.COMMUNITY -> navigator.joinCommunity()
+                AboutActivityPresenter.BETA -> navigator.joinBeta()
             }
         }
     }
