@@ -5,21 +5,16 @@ import androidx.lifecycle.LiveData
 import androidx.lifecycle.MutableLiveData
 import dev.olog.msc.BuildConfig
 import dev.olog.msc.R
-import dev.olog.msc.dagger.qualifier.ApplicationContext
-import dev.olog.msc.dagger.scope.PerActivity
 import dev.olog.msc.presentation.model.DisplayableItem
 import dev.olog.msc.pro.IBilling
 import dev.olog.msc.utils.MediaId
 import dev.olog.msc.utils.k.extension.asLiveData
 import io.reactivex.Observable
 import io.reactivex.rxkotlin.withLatestFrom
-import javax.inject.Inject
 
-@PerActivity
-class AboutActivityPresenter @Inject constructor(
-        @ApplicationContext private val context: Context,
+class AboutActivityPresenter(
+        context: Context,
         private val billing: IBilling
-
 ) {
 
     companion object {
