@@ -4,16 +4,9 @@ import dagger.Subcomponent
 import dagger.android.AndroidInjector
 import dev.olog.msc.dagger.scope.PerActivity
 import dev.olog.msc.presentation.about.AboutActivity
-import dev.olog.msc.presentation.licenses.di.LicensesFragmentInjector
-import dev.olog.msc.presentation.navigator.NavigatorModule
-import dev.olog.msc.presentation.special.thanks.di.SpecialThanksFragmentInjector
 
 @Subcomponent(modules = arrayOf(
-        AboutActivityModule::class,
-        NavigatorModule::class,
-
-        SpecialThanksFragmentInjector::class,
-        LicensesFragmentInjector::class
+        AboutActivityModule::class
 ))
 @PerActivity
 interface AboutActivitySubComponent : AndroidInjector<AboutActivity> {
