@@ -1,27 +1,32 @@
 package dev.olog.msc.presentation.licenses
 
 import android.os.Bundle
+import android.view.LayoutInflater
 import android.view.View
+import android.view.ViewGroup
+import androidx.fragment.app.Fragment
 import dev.olog.msc.R
-import dev.olog.msc.presentation.base.BaseFragment
 import dev.olog.msc.utils.k.extension.act
 import dev.olog.msc.utils.k.extension.asLiveData
 import dev.olog.msc.utils.k.extension.subscribe
 import io.reactivex.Single
 import kotlinx.android.synthetic.main.activity_about.*
 import kotlinx.android.synthetic.main.fragment_licenses.view.*
-import javax.inject.Inject
 
-class LicensesFragment : BaseFragment(){
+class LicensesFragment : Fragment(){
 
     companion object {
         const val TAG = "LicensesFragment"
     }
 
-    @Inject lateinit var presenter: LicensesFragmentPresenter
-    @Inject lateinit var adapter: LicensesFragmentAdapter
+    override fun onCreateView(inflater: LayoutInflater, container: ViewGroup?, savedInstanceState: Bundle?): View? {
+        return inflater.inflate(R.layout.fragment_licenses, container, false)
+    }
 
-    override fun onViewBound(view: View, savedInstanceState: Bundle?) {
+    override fun onViewCreated(view: View, savedInstanceState: Bundle?) {
+        val presenter = LicensesFragmentPresenter(act.applicationContext)
+        val adapter = LicensesFragmentAdapter(lifecycle)
+
         view.list.adapter = adapter
         view.list.layoutManager = androidx.recyclerview.widget.LinearLayoutManager(context)
 
@@ -33,8 +38,7 @@ class LicensesFragment : BaseFragment(){
 
     override fun onResume() {
         super.onResume()
-        act.switcher.setText(getString(R.string.about_third_sw))
+        act.switcher?.setText(getString(R.string.about_third_sw))
     }
 
-    override fun provideLayoutId(): Int = R.layout.fragment_licenses
 }
