@@ -19,7 +19,6 @@ import dev.olog.msc.presentation.edit.track.di.EditTrackFragmentInjector
 import dev.olog.msc.presentation.library.folder.tree.di.FolderTreeFragmentModule
 import dev.olog.msc.presentation.library.tab.di.TabFragmentInjector
 import dev.olog.msc.presentation.main.MainActivity
-import dev.olog.msc.presentation.navigator.NavigatorModule
 import dev.olog.msc.presentation.player.di.PlayerFragmentModule
 import dev.olog.msc.presentation.playing.queue.di.PlayingQueueFragmentInjector
 import dev.olog.msc.presentation.playlist.track.chooser.di.PlaylistTracksChooserInjector
@@ -30,7 +29,6 @@ import dev.olog.msc.presentation.search.di.SearchFragmentInjector
 @Subcomponent(modules = arrayOf(
         MainActivityModule::class,
         MainActivityFragmentsModule::class,
-        NavigatorModule::class,
 //
 //        // fragments
         TabFragmentInjector::class,
