@@ -11,8 +11,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:windowBackground">
+        android:layout_height="wrap_content">
 
         <FrameLayout
             android:id="@+id/content"
